# ChessFileStorage

./: .gitignore  README.md  app.py  chess_storage.py  game_metadata.json  lichess_api.py  pyproject.toml  requirements.txt  util.py
static/css/: custom.css
static/js/: main.js
templates/: index.html  layout.html
util/: cleanup.py
